# rl_simi2sim

./: README.md  deploy_mujoco_gamepad.py  deploy_sim.py  test.py
configs/: dog.yaml  dog_gym.yaml
model/dog/dog_V1_description/: CMakeLists.txt
model/dog/dog_V2_description/: package.xml
policy/: policy.pt  policy_gym_0319_1_p10d01.onnx  policy_gym_0327_1(p8d01).pt  policy_gym_0327_2(p8d01).pt  policy_gym_0327_3(p8d01).pt  policy_gym_0327_4(p8d01).pt  policy_gym_0327_5(p8d01).pt  policy_gym_0330_1(p8d01).pt  policy_gym_0331_1(p10d05).pt  policy_gym_0331_2(p10d02).pt  policy_gym_0331_3(p10d02).pt  policy_gym_0331_4(p10d02).pt  policy_gym_0331_5(p10d02).pt  policy_gym_0401_1(p10d02)_40.pt  policy_gym_0401_2(p10d02)_40.pt  policy_lab_0312_3(p8d01).pt  policy_lab_0312_4(p8d01).pt  policy_lab_0313_3(p10d01).onnx  policy_lab_0313_3(p10d01).pt  policy_lab_0316_1(p10d01).onnx  policy_lab_0316_2(p10d01).onnx  policy_lab_0317_1(p10d01).onnx  policy_lab_0320_1(p10d01).onnx  policy_lab_0320_3(p15d01).onnx  policy_lab_0323_4_p15d01.onnx  policy_lab_0323_5_p15d01.onnx  policy_lab_0324_3(p15d01) copy.onnx  policy_lab_0325_1(p10d01).onnx  policy_lab_0325_2(p10d01).onnx  policy_lab_0325_3(p10d01).onnx  policy_lab_0325_4(p10d01).onnx  policy_lab_0326_2(p10d01).onnx  policy_lab_0326_4(p10d01).onnx  policy_lab_0326_5(p10d01).onnx  policy_lab_0326_6(p10d01).onnx  policy_lab_0327_1(p10d01).onnx  policy_lab_0327_2(p10d01) copy.onnx  policy_lab_0327_2(p10d01).onnx  policy_lab_0327_3(p10d01).onnx  policy_lab_0327_4(p10d01).onnx  (+15 more)
src/rl_real_cpp/: CMakeLists.txt  package.xml
src/rl_real_cpp/src/: rl_real.cpp
src/rl_real_py/: package.xml  setup.py
src/rl_real_py/configs/: dog.yaml  dog_gym.yaml
src/rl_real_py/policy/: policy_0228.pt  policy_0302.pt  policy_0304.pt  policy_0304_2.pt  policy_0304_3.pt  policy_0304_4.pt  policy_0305_1.pt  policy_1.pt  policy_2.pt  policy_gym_0311_1.pt  xxh2.pt  (+10 more)
(+60 files in other folders)
